
[TestArrayTypes/simple_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 0-6,
    },
    span: 0-8,
}
---

[TestArrayTypes/number_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 7,
        span: 0-6,
    },
    span: 0-8,
}
---

[TestArrayTypes/nested_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 0-6,
        },
        span: 0-8,
    },
    span: 0-10,
}
---

[TestArrayTypes/triple_nested_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 0-6,
            },
            span: 0-8,
        },
        span: 0-10,
    },
    span: 0-12,
}
---

[TestArrayTypes/array_of_type_reference - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Foo",
            span: 0-3,
        },
        span: 0-3,
    },
    span: 0-5,
}
---

[TestArrayTypes/array_of_union - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 10-16,
                },
            },
            span: 1-16,
        },
        span: 0-17,
    },
    span: 0-19,
}
---

[TestArrayTypes/array_of_intersection - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1-4,
                    },
                    span: 1-4,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Bar",
                        span: 7-10,
                    },
                    span: 7-10,
                },
            },
            span: 1-10,
        },
        span: 0-11,
    },
    span: 0-13,
}
---

[TestArrayTypes/array_with_type_args - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Array",
            span: 0-5,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 6-12,
            },
        },
        span: 0-13,
    },
    span: 0-15,
}
---

[TestArrayTypes/qualified_name_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Ident{
                Name: "Foo",
                span: 0-3,
            },
            Right: &dts_parser.Ident{
                Name: "Bar",
                span: 4-7,
            },
        },
        span: 0-7,
    },
    span: 0-9,
}
---

[TestTupleTypes/empty_tuple - 1]
&dts_parser.TupleType{
    span: 0-2,
}
---

[TestTupleTypes/single_element - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
    },
    span: 0-8,
}
---

[TestTupleTypes/two_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            span: 9-15,
        },
    },
    span: 0-16,
}
---

[TestTupleTypes/three_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            span: 9-15,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 17-24,
            },
            span: 17-24,
        },
    },
    span: 0-25,
}
---

[TestTupleTypes/with_primitives - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                span: 1-4,
            },
            span: 1-4,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 1,
                span: 6-13,
            },
            span: 6-13,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 5,
                span: 15-20,
            },
            span: 15-20,
        },
    },
    span: 0-21,
}
---

[TestTupleTypes/with_type_references - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 1-4,
                },
                span: 1-4,
            },
            span: 1-4,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: 6-9,
                },
                span: 6-9,
            },
            span: 6-9,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Baz",
                    span: 11-14,
                },
                span: 11-14,
            },
            span: 11-14,
        },
    },
    span: 0-15,
}
---

[TestTupleTypes/mixed_types - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 9-12,
                },
                span: 9-12,
            },
            span: 9-12,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 14-20,
            },
            span: 14-20,
        },
    },
    span: 0-21,
}
---

[TestTupleTypes/with_union_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1-7,
                    },
                    &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 10-16,
                    },
                },
                span: 1-16,
            },
            span: 1-16,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 18-25,
            },
            span: 18-25,
        },
    },
    span: 0-26,
}
---

[TestTupleTypes/with_intersection_elements - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Foo",
                            span: 1-4,
                        },
                        span: 1-4,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Bar",
                            span: 7-10,
                        },
                        span: 7-10,
                    },
                },
                span: 1-10,
            },
            span: 1-10,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Baz",
                    span: 12-15,
                },
                span: 12-15,
            },
            span: 12-15,
        },
    },
    span: 0-16,
}
---

[TestTupleTypes/nested_tuples - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.TupleType{
                Elements: []dts_parser.TupleElement{
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 2-8,
                        },
                        span: 2-8,
                    },
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 10-16,
                        },
                        span: 10-16,
                    },
                },
                span: 1-17,
            },
            span: 1-17,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.TupleType{
                Elements: []dts_parser.TupleElement{
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            Kind: 8,
                            span: 20-27,
                        },
                        span: 20-27,
                    },
                    dts_parser.TupleElement{
                        Type: &dts_parser.PrimitiveType{
                            span: 29-32,
                        },
                        span: 29-32,
                    },
                },
                span: 19-33,
            },
            span: 19-33,
        },
    },
    span: 0-34,
}
---

[TestTupleTypes/tuple_of_arrays - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                span: 1-9,
            },
            span: 1-9,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 11-17,
                },
                span: 11-19,
            },
            span: 11-19,
        },
    },
    span: 0-20,
}
---

[TestTupleTypes/array_of_tuples - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                span: 1-7,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 9-15,
                },
                span: 9-15,
            },
        },
        span: 0-16,
    },
    span: 0-18,
}
---

[TestTupleWithOptionalElements/single_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            Optional: true,
            span: 1-7,
        },
    },
    span: 0-9,
}
---

[TestTupleWithOptionalElements/optional_at_end - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            Optional: true,
            span: 9-15,
        },
    },
    span: 0-17,
}
---

[TestTupleWithOptionalElements/multiple_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            Optional: true,
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 10-16,
            },
            Optional: true,
            span: 10-16,
        },
    },
    span: 0-18,
}
---

[TestTupleWithOptionalElements/mixed_optional_required - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            Optional: true,
            span: 9-15,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 18-25,
            },
            span: 18-25,
        },
    },
    span: 0-26,
}
---

[TestTupleWithRestElements/rest_at_end - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 12-18,
                },
                span: 12-20,
            },
            Rest: true,
            span: 9-20,
        },
    },
    span: 0-21,
}
---

[TestTupleWithRestElements/rest_only - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 4-10,
                },
                span: 4-12,
            },
            Rest: true,
            span: 1-12,
        },
    },
    span: 0-13,
}
---

[TestTupleWithRestElements/multiple_before_rest - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            span: 9-15,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 8,
                    span: 20-27,
                },
                span: 20-29,
            },
            Rest: true,
            span: 17-29,
        },
    },
    span: 0-30,
}
---

[TestTupleWithRestElements/rest_with_union - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.ParenthesizedType{
                    Type: &dts_parser.UnionType{
                        Types: []dts_parser.TypeAnn{
                            &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 13-19,
                            },
                            &dts_parser.PrimitiveType{
                                Kind: 8,
                                span: 22-29,
                            },
                        },
                        span: 13-29,
                    },
                    span: 12-30,
                },
                span: 12-32,
            },
            Rest: true,
            span: 9-32,
        },
    },
    span: 0-33,
}
---

[TestTupleWithLabels/single_labeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 4-10,
            },
            span: 1-10,
        },
    },
    span: 0-11,
}
---

[TestTupleWithLabels/multiple_labeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 4-10,
            },
            span: 1-10,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 12-13,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 15-21,
            },
            span: 12-21,
        },
    },
    span: 0-22,
}
---

[TestTupleWithLabels/mixed_labeled_unlabeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 9-10,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 12-18,
            },
            span: 9-18,
        },
    },
    span: 0-19,
}
---

[TestTupleWithLabels/labeled_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 5-11,
            },
            Optional: true,
            span: 1-11,
        },
    },
    span: 0-12,
}
---

[TestTupleWithLabels/labeled_with_colon_and_optional - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 5-11,
            },
            Optional: true,
            span: 1-11,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 13-14,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 16-22,
            },
            span: 13-22,
        },
    },
    span: 0-23,
}
---

[TestTupleWithLabels/labeled_rest - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 4-10,
            },
            span: 1-10,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "rest",
                span: 15-19,
            },
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 21-27,
                },
                span: 21-29,
            },
            Rest: true,
            span: 12-29,
        },
    },
    span: 0-30,
}
---

[TestTupleWithLabels/all_labeled - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1-2,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 4-10,
            },
            span: 1-10,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 12-13,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 15-21,
            },
            span: 12-21,
        },
        dts_parser.TupleElement{
            Name: &dts_parser.Ident{
                Name: "z",
                span: 23-24,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 26-33,
            },
            span: 23-33,
        },
    },
    span: 0-34,
}
---

[TestTupleEdgeCases/trailing_comma - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                span: 1-7,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 9-15,
                },
                span: 9-15,
            },
        },
        span: 0-17,
    },
}
---

[TestTupleEdgeCases/single_trailing_comma - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                span: 1-7,
            },
        },
        span: 0-9,
    },
}
---

[TestTupleEdgeCases/multiple_trailing_commas - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 8-9,
            Message: "Expected tuple element",
        },
        &dts_parser.Error{
            Span: 8-9,
            Message: "Expected 13 but got 16",
        },
    },
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                span: 1-7,
            },
        },
        span: 0-7,
    },
}
---

[TestTupleEdgeCases/spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 2-8,
                },
                span: 2-8,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 11-17,
                },
                span: 11-17,
            },
        },
        span: 0-19,
    },
}
---

[TestTupleEdgeCases/newlines - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TupleType{
        Elements: []dts_parser.TupleElement{
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 4-10,
                },
                span: 4-10,
            },
            dts_parser.TupleElement{
                Type: &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 14-20,
                },
                span: 14-20,
            },
        },
        span: 0-22,
    },
}
---

[TestArrayAndTupleCombinations/union_with_array - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 0-6,
            },
            span: 0-8,
        },
        &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 11-17,
            },
            span: 11-19,
        },
    },
    span: 0-19,
}
---

[TestArrayAndTupleCombinations/union_with_tuple - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1-7,
                    },
                    span: 1-7,
                },
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 9-15,
                    },
                    span: 9-15,
                },
            },
            span: 0-16,
        },
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 20-27,
                    },
                    span: 20-27,
                },
            },
            span: 19-28,
        },
    },
    span: 0-28,
}
---

[TestArrayAndTupleCombinations/intersection_with_array - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ArrayType{
            ElementType: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 0-3,
                },
                span: 0-3,
            },
            span: 0-5,
        },
        &dts_parser.ArrayType{
            ElementType: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: 8-11,
                },
                span: 8-11,
            },
            span: 8-13,
        },
    },
    span: 0-13,
}
---

[TestArrayAndTupleCombinations/array_of_union - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1-7,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 10-16,
                },
            },
            span: 1-16,
        },
        span: 0-17,
    },
    span: 0-19,
}
---

[TestArrayAndTupleCombinations/tuple_of_unions - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 1-7,
                    },
                    &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 10-16,
                    },
                },
                span: 1-16,
            },
            span: 1-16,
        },
        dts_parser.TupleElement{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.PrimitiveType{
                        Kind: 8,
                        span: 18-25,
                    },
                    &dts_parser.PrimitiveType{
                        span: 28-31,
                    },
                },
                span: 18-31,
            },
            span: 18-31,
        },
    },
    span: 0-32,
}
---

[TestArrayAndTupleCombinations/complex_nested - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 0-5,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TupleType{
                    Elements: []dts_parser.TupleElement{
                        dts_parser.TupleElement{
                            Type: &dts_parser.PrimitiveType{
                                Kind: 6,
                                span: 7-13,
                            },
                            span: 7-13,
                        },
                        dts_parser.TupleElement{
                            Type: &dts_parser.PrimitiveType{
                                Kind: 7,
                                span: 15-21,
                            },
                            span: 15-21,
                        },
                    },
                    span: 6-22,
                },
            },
            span: 0-23,
        },
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.ArrayType{
                        ElementType: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "Foo",
                                span: 27-30,
                            },
                            span: 27-30,
                        },
                        span: 27-32,
                    },
                    span: 27-32,
                },
                dts_parser.TupleElement{
                    Type: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Bar",
                            span: 34-37,
                        },
                        span: 34-37,
                    },
                    span: 34-37,
                },
            },
            span: 26-38,
        },
    },
    span: 0-38,
}
---

[TestArrayAndTupleCombinations/parenthesized_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1-7,
        },
        span: 0-8,
    },
    span: 0-10,
}
---

[TestArrayAndTupleCombinations/array_in_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Map",
        span: 0-3,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 4-10,
        },
        &dts_parser.ArrayType{
            ElementType: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 12-18,
            },
            span: 12-20,
        },
    },
    span: 0-21,
}
---

[TestArrayAndTupleCombinations/tuple_in_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Result",
        span: 0-6,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TupleType{
            Elements: []dts_parser.TupleElement{
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 6,
                        span: 8-14,
                    },
                    span: 8-14,
                },
                dts_parser.TupleElement{
                    Type: &dts_parser.PrimitiveType{
                        Kind: 7,
                        span: 16-22,
                    },
                    span: 16-22,
                },
            },
            span: 7-23,
        },
    },
    span: 0-24,
}
---

[TestArrayVsIndexAccess/array_type - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 0-6,
    },
    span: 0-8,
}
---

[TestArrayVsIndexAccess/empty_brackets_after_type - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Foo",
            span: 0-3,
        },
        span: 0-3,
    },
    span: 0-5,
}
---

[TestArrayVsIndexAccess/nested_arrays - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 0-6,
        },
        span: 0-8,
    },
    span: 0-10,
}
---

[TestArrayVsIndexAccess/tuple - 1]
&dts_parser.TupleType{
    Elements: []dts_parser.TupleElement{
        dts_parser.TupleElement{
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            span: 1-7,
        },
    },
    span: 0-8,
}
---

[TestArrayVsIndexAccess/empty_tuple - 1]
&dts_parser.TupleType{
    span: 0-2,
}
---

[TestArrayTypes/readonly_string_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 9-15,
    },
    Readonly: true,
    span: 0-17,
}
---

[TestArrayTypes/readonly_number_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.PrimitiveType{
        Kind: 7,
        span: 9-15,
    },
    Readonly: true,
    span: 0-17,
}
---

[TestArrayTypes/readonly_nested_array - 1]
&dts_parser.ArrayType{
    ElementType: &dts_parser.ArrayType{
        ElementType: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 9-15,
        },
        Readonly: true,
        span: 0-17,
    },
    span: 0-19,
}
---
